# TCE_Agent

./: .env.example  AGENTS.md  Dockerfile  docker-compose.yml  instructions.md  langgraph.json  main.py  pyproject.toml
.cursor/rules/: clean-architecture.mdc  clean-comments.mdc  core-business.mdc  error-handling-logging.mdc  langgraph-state.mdc  langsmith-evaluation.mdc  langsmith-observability.mdc  legal-compliance-agent.mdc  project-documentation.mdc  prompt-engineering.mdc  security-infrastructure.mdc  solid-clean-code.mdc  testing-qa.mdc
.cursor/skills/criar-agente-especialista/: SKILL.md
.cursor/skills/criar-avaliador-langsmith/: SKILL.md
.cursor/skills/criar-dataset-langsmith/: SKILL.md
.cursor/skills/criar-ferramenta-rag/: SKILL.md
src/adapters/tools/: busca_leis.py
src/domain/entities/: auditoria.py  documentos.py
src/infrastructure/: env_bootstrap.py  studio.py
src/use_cases/: state.py  state_normalization.py
src/use_cases/agents/: licitacao.py  prompts.py  relator.py  supervisor.py
src/use_cases/workflows/: grafo.py
